# sternchenhimmel

./: README.md
electronic/: sternchenhimmel.kicad_pcb  sternchenhimmel.pro  sternchenhimmel.sch
sky/cut/: Makefile
sky/cut/parts/: 2d.scad  3d.scad  base.scad
sky/print/: holder.scad  ledHole.scad  sternchenhimmel.scad
software/: Makefile  README.md  sdkconfig
software/features/: CMakeLists.txt  sternchenhimmel.feature
software/features/step_definitions/: ProgrammableNumberFactory.h  ValueStore.h  steps.cpp
software/logic/: Cubic.h  Fader.h  Filter.h  Generator.h  NumberFactory.h  SternchenHimmel.h  Timer.h  TimerListener.h  ValueListener.h
software/main/: LedWriter.h  RandomNumberFactory.cpp  RandomNumberFactory.h  main.cpp
